# BCG_challenge

./: .env.example  .gitignore  EDA.ipynb  README.md  data_transfo.ipynb  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
constants/: __init__.py  constants.py  paths.py
constants/column_names/: __init__.py  bronze.py  dashboard.py  gold.py  silver.py
data/: bronze.dvc
docs/: DVC_WORKFLOW.md  PROJECT_OWNER_CHECKLIST.md  SETUP.md  features.md
my_app/: app.py  requirements.txt
my_app/data/: scenario_126_predictions.csv  scenario_245_predictions.csv  scenario_585_predictions.csv
my_app/theme/: __init__.py
notebooks/: EDA.ipynb  Strategy.ipynb  data_cleaning.ipynb  data_cleaning_analysis.ipynb  data_transfo.ipynb  impact_analysis.ipynb  pipeline_V0.ipynb
src/pipelines/data/: bronze_to_silver.py  silver_to_gold.py
src/pipelines/models/: train_models.py  xgboost_model.py
src/pipelines/utils/: model_inputs_loading.py  prediction_utils.py
