[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["constants", "src"]

[tool.setuptools.package-data]
"*" = []

[project]
name = "24-data-strat-bcgx"
version = "0.1.0"
authors = [
    { name = "Augustin Naton", email = "augustin.naton@gmail.com" },
    {name = "Nicolas Guillet", email = "nicolas.guillet@hec.edu"},
    {name = "Mehdi Digua", email = "mehdi.digua@hec.edu"},
]

description = "BCG X data challenge for the XHEC Data Science and AI for Business course."
readme = "README.md"
requires-python = ">=3.13,<3.14"


dependencies = [
    "dvc>=3.66.1",
    "dvc-s3>=3.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "pandas<3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]


[tool.uv]
default-groups = ["dev"]
environments = ["sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstring conventions)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["24-data-strat-bcgx"]
force-sort-within-sections = true
